# mimalloc-test

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
cmake/: Utils.cmake
